<resources>
    <string name="app_name">TraGua</string>
    <string name="title_activity_maps">Map</string>

    <string name="welcome">Welcome</string>
    <string name="language">Language</string>
    <string name="ok">OK</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!--Strings for sideavigationview-->
    <string name="change_languaje">Change Languaje</string>
    <string name="Import">Salud</string>
    <string name="gallery">Tienda</string>
    <string name="slideshow">Publicos</string>
    <string name="tools">Buffet</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="settings">Settings</string>
    <string name="title_registry">Registry</string>
    <string name="firstname">First Name</string>
    <string name="password">Password</string>
    <string name="lastname">Last Name</string>
    <string name="username">UserName</string>
    <string name="correo">Email</string>
    <string name="repeatpassword">Repeat Password</string>
    <string name="login">Login</string>
    <string name="registry">SingUp</string>
    <string name="Markers">Markers</string>
    <string name="Editprofile">Edit profile</string>
    <string name="disco">Discoteca</string>
    <string name="where_do_you_want_to_go">Where do you want to go</string>

    <string name="dont_have_account">No Account yet?? Create One</string>

    <string name="empty_username">Can\'t be empty</string>
    <string name="password_incorrect">Wrong password or but insert</string>
    <string name="authenticating">Authenticating</string>

    <string name="place_name">Place Name</string>
    <string name="exit">Exit</string>
    <string name="trazar_ruta">Trace Route</string>
    <string name="more_info">More Information</string>
    <string name="go_to_maps">Go to Maps</string>
</resources>
