<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/nav_Salud"
        android:icon="@drawable/marcador"
        android:enabled="true"
        android:title="@string/Import"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/nav_Tienda"
        android:icon="@drawable/tienda"
        android:enabled="true"
        android:title="@string/gallery"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/nav_publicos"
        android:icon="@drawable/tiket"
        android:enabled="true"
        android:title="@string/slideshow"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/nav_Buffes"
        android:icon="@drawable/buffet"
        android:enabled="true"
        android:title="@string/tools"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/nav_Discoteca"
        android:icon="@drawable/hostal"
        android:enabled="true"
        android:title="@string/disco"
        app:showAsAction="ifRoom"/>
</menu>