<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_marker"
            android:icon="@drawable/ic_menu_marcador"
            android:title="@string/Markers" />

    </group>


    <item android:title="Settings">
        <menu>
            <item
                android:id="@+id/edit_profile"
                android:icon="@drawable/ic_menu_editar"
                android:title="@string/Editprofile" />

            <item android:id="@+id/change_languaje"
                android:title="@string/change_languaje"
                android:icon="@drawable/ic_menu_traduccion"/>
        </menu>
    </item>

</menu>
