<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white">
    <TextView
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/info_place_name"
        android:gravity="center"
        android:text="Comedor"
        android:textSize="22sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="100dp">
        <TextView
            android:id="@+id/more_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:textSize="16sp"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#C8C9CB" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button android:id="@+id/info_bt_salir"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/exit"
            android:textSize="14sp"
            android:background="@color/white"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#C8C9CB" />
        <Button
            android:id="@+id/info_bt_more_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/more_info"
            android:textSize="14sp"
            android:background="@color/white"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#C8C9CB" />
        <Button
            android:id="@+id/info_bt_trazar_ruta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trazar_ruta"
            android:textSize="14sp"
            android:background="@color/white"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#C8C9CB" />
</LinearLayout>